--- a/public/index.html
+++ b/public/index.html
@@ -9,11 +9,8 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
     <!-- Include FullCalendar scripts -->
-    <script src='https://cdn.jsdelivr.net/npm/fullcalendar@6.1.9/main.min.js'></script>
-
-    <!-- Include FullCalendar styles -->
-    <link href='https://cdn.jsdelivr.net/npm/fullcalendar@6.1.9/main.min.css' rel='stylesheet' />
-
+    <script src='https://cdn.jsdelivr.net/npm/fullcalendar@6.1.9/index.global.min.js'></script>
+ 
     <!-- Include your JavaScript file here -->
     <script src='Dashboard.js'></script>
 
