--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
     <!-- Include your JavaScript file here -->
     <script src='Dashboard.js'></script>
     
-    <title>React App</title>
+    <title>Paw-Plan</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
